# Make Autoconf-related libraries.

# Copyright (C) 2001-2005, 2009-2013 Free Software Foundation, Inc.

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

TAGS_FILES = # Incrementally updated later.
ETAGS_ARGS = # Likewise.
EXTRA_DIST = # Likewise.

## Required by rules to build several m4 libraries.
include $(srcdir)/freeze.mk

## Checks.
check-local: check-forbidden-patterns
forbidden_patterns = -e '^_*EOF' -e ' cmp '
forbidden_patterns_files = # Incrementally updated later.

## ---------------------------------------------------------------- ##
## Auxiliary perl modules used by autom4te and other perl scripts.  ##
## ---------------------------------------------------------------- ##

perllibdir = $(pkgdatadir)/Autom4te

dist_perllib_DATA = \
  Autom4te/C4che.pm \
  Autom4te/ChannelDefs.pm \
  Autom4te/Channels.pm \
  Autom4te/Configure_ac.pm \
  Autom4te/FileUtils.pm \
  Autom4te/General.pm \
  Autom4te/Getopt.pm \
  Autom4te/Request.pm \
  Autom4te/XFile.pm

TAGS_FILES += $(dist_perllib_DATA)
ETAGS_ARGS += --lang=perl

## ------------------------------------------ ##
## Make Autom4te default configuration file.  ##
## ------------------------------------------ ##

nodist_pkgdata_DATA = autom4te.cfg
EXTRA_DIST += autom4te.in

edit = sed \
	-e 's|@SHELL[@]|$(SHELL)|g' \
	-e 's|@PERL[@]|$(PERL)|g' \
	-e 's|@bindir[@]|$(bindir)|g' \
	-e 's|@pkgdatadir[@]|$(pkgdatadir)|g' \
	-e 's|@prefix[@]|$(prefix)|g' \
	-e 's|@autoconf-name[@]|'`echo autoconf | sed '$(transform)'`'|g' \
	-e 's|@autoheader-name[@]|'`echo autoheader | sed '$(transform)'`'|g' \
	-e 's|@autom4te-name[@]|'`echo autom4te | sed '$(transform)'`'|g' \
	-e 's|@M4[@]|$(M4)|g' \
	-e 's|@AWK[@]|$(AWK)|g' \
	-e 's|@VERSION[@]|$(VERSION)|g' \
	-e 's|@PACKAGE_NAME[@]|$(PACKAGE_NAME)|g'

# All the files below depend on Makefile so that they are rebuilt
# when the prefix, etc. changes. Unfortunately, suffix rules
# cannot have additional dependencies, so we have to use explicit rules.
CLEANFILES = autom4te.cfg
autom4te.cfg: $(srcdir)/autom4te.in Makefile
	rm -f autom4te.cfg autom4te.tmp
	$(edit) $(srcdir)/autom4te.in >autom4te.tmp
	chmod a-w autom4te.tmp
	mv autom4te.tmp autom4te.cfg

## ----------------------------- ##
## Make Autoconf Emacs library.  ##
## ----------------------------- ##

dist_lisp_LISP = emacs/autoconf-mode.el emacs/autotest-mode.el

# TODO: This is required to work around a limitation in older
#	Automake.  Remove once we can assume Automake 1.13 or later.
CLEANFILES += autoconf-mode.elc autotest-mode.elc

## ----------------------- ##
## Make Autoconf library.  ##
## ----------------------- ##

autoconflibdir = $(pkgdatadir)/autoconf

dist_autoconflib_DATA = \
  autoconf/autoconf.m4 \
  autoconf/general.m4 \
  autoconf/status.m4 \
  autoconf/oldnames.m4 \
  autoconf/specific.m4 \
  autoconf/autoheader.m4 \
  autoconf/autoupdate.m4 \
  autoconf/autotest.m4 \
  autoconf/autoscan.m4 \
  autoconf/lang.m4 \
  autoconf/c.m4 \
  autoconf/erlang.m4 \
  autoconf/fortran.m4 \
  autoconf/functions.m4 \
  autoconf/go.m4 \
  autoconf/headers.m4 \
  autoconf/types.m4 \
  autoconf/libs.m4 \
  autoconf/programs.m4

nodist_autoconflib_DATA = autoconf/autoconf.m4f
CLEANFILES += $(nodist_autoconflib_DATA)

TAGS_FILES += $(dist_autoconflib_DATA)
ETAGS_ARGS += $(ETAGS_FOR_AUTOCONF)

forbidden_patterns_files += $(dist_autoconflib_DATA)

autoconf/autoconf.m4f: $(autoconf_m4f_dependencies)

## ------------------------ ##
##  Make Autoscan library.  ##
## ------------------------ ##

autoscanlibdir = $(pkgdatadir)/autoscan

EXTRA_DIST += autoscan/autoscan.pre
nodist_autoscanlib_DATA = autoscan/autoscan.list
CLEANFILES += autoscan/autoscan.list

autoscan/autoscan.list: $(srcdir)/autoscan/autoscan.pre $(autoconf_m4f_dependencies) Makefile.am
	$(MKDIR_P) $(@D)
	echo '# Automatically Generated: do not edit this file' >$@
	sed '/^[#]/!q' $(srcdir)/autoscan/autoscan.pre >>$@
	( \
	  sed -n '/^[^#]/p' $(srcdir)/autoscan/autoscan.pre; \
	  $(MY_AUTOM4TE) --cache '' -M -l autoconf -t'AN_OUTPUT:$$1: $$2		$$3' \
	) | LC_ALL=C sort >>$@

## ----------------------------------- ##
## Make Autoconf library for M4sugar.  ##
## ----------------------------------- ##

m4sugarlibdir = $(pkgdatadir)/m4sugar

dist_m4sugarlib_DATA = \
  m4sugar/m4sugar.m4 \
  m4sugar/foreach.m4 \
  m4sugar/m4sh.m4

nodist_m4sugarlib_DATA = \
  m4sugar/version.m4 \
  m4sugar/m4sugar.m4f \
  m4sugar/m4sh.m4f

CLEANFILES += $(nodist_m4sugarlib_DATA)

# Get the release year from ../ChangeLog.
RELEASE_YEAR = \
  `sed 's/^\([0-9][0-9][0-9][0-9]\).*/\1/;q' $(top_srcdir)/ChangeLog`

# The ':;' in the second line of the recipe works around a redirected
# compound command bash exit status bug.
m4sugar/version.m4: Makefile
	$(MKDIR_P) $(@D)
	:;{ \
	  echo '# This file is part of -*- Autoconf -*-.' && \
	  echo '# Version of Autoconf.' && \
	  echo '# Copyright (C) 1999, 2000, 2001, 2002, 2006, 2007, 2009' && \
	  echo '# Free Software Foundation, Inc.' && \
	  echo  &&\
	  echo 'm4_define([m4_PACKAGE_NAME],      [$(PACKAGE_NAME)])' && \
	  echo 'm4_define([m4_PACKAGE_TARNAME],   [$(PACKAGE_TARNAME)])' && \
	  echo 'm4_define([m4_PACKAGE_VERSION],   [$(PACKAGE_VERSION)])' && \
	  echo 'm4_define([m4_PACKAGE_STRING],    [$(PACKAGE_STRING)])' && \
	  echo 'm4_define([m4_PACKAGE_BUGREPORT], [$(PACKAGE_BUGREPORT)])' && \
	  echo 'm4_define([m4_PACKAGE_URL],       [$(PACKAGE_URL)])' && \
	  echo 'm4_define([m4_PACKAGE_YEAR],      ['$(RELEASE_YEAR)'])'; \
	} > $@-t
	mv $@-t $@

TAGS_FILES += $(dist_m4sugarlib_DATA)
ETAGS_ARGS += $(ETAGS_FOR_AUTOCONF)

forbidden_patterns_files += $(dist_m4sugarlib_DATA)

m4sugar/m4sugar.m4f: $(m4sugar_m4f_dependencies)
m4sugar/m4sh.m4f: $(m4sh_m4f_dependencies)

## ----------------------- ##
## Make Autotest library.  ##
## ----------------------- ##

autotestlibdir = $(pkgdatadir)/autotest

dist_autotestlib_DATA = \
  autotest/autotest.m4 \
  autotest/general.m4 \
  autotest/specific.m4

nodist_autotestlib_DATA = autotest/autotest.m4f
CLEANFILES += $(nodist_autotestlib_DATA)

TAGS_FILES += $(dist_autotestlib_DATA)
ETAGS_ARGS += $(ETAGS_FOR_AUTOCONF)

forbidden_patterns_files += $(dist_autotestlib_DATA)

autotest/autotest.m4f: $(autotest_m4f_dependencies)
