## Process this file with automake to create Makefile.in

perllibdir = $(pkgdatadir)/Autom4te
dist_perllib_DATA = \
  ChannelDefs.pm \
  Channels.pm \
  Configure_ac.pm \
  FileUtils.pm \
  General.pm \
  Struct.pm \
  XFile.pm


## --------------- ##
## Building TAGS.  ##
## --------------- ##

TAGS_FILES = $(dist_perllib_DATA)

ETAGS_ARGS = --lang=perl
